# patentcheckagent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260623_0001_initial_schema.py
backend/app/: __init__.py  deps.py  main.py  worker.py
backend/app/api/: __init__.py  admin.py  auth.py  patent_checks.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  model_call_log.py  patent_check_file.py  patent_check_task.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  patent_check.py
backend/app/scripts/: __init__.py  seed_users.py
backend/app/services/: __init__.py  document_extractor.py  errors.py  model_client.py  patent_check_service.py  pdf_extractor.py  prompt_loader.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_document_extractor.py  test_patent_checks.py  test_pdf_extractor.py  test_security.py
deploy/nginx/: default.conf
docs/: PRD.md  deployment.md  operations.md
docs/superpowers/plans/: 2026-06-23-patent-check-agent-mvp.md
docs/superpowers/specs/: 2026-06-23-patent-check-agent-design.md  2026-06-24-word-upload-support-design.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AppShell.tsx  (+1 more)
skills/: check-patent.md
(+7 files in other folders)
