# 这个文件用于声明后端 Python 项目的依赖、测试和代码质量配置。

[project]
name = "patent-check-agent-backend"
version = "0.1.0"
description = "FastAPI backend for the patent check agent MVP."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.1.18",
  "pydantic-settings>=2.2.1",
  "pypdf>=4.2.0",
  "pyjwt>=2.8.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.9",
  "redis>=5.0.4",
  "rq>=1.16.2",
  "sqlalchemy>=2.0.29",
  "uvicorn[standard]>=0.29.0"
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*", "prompts*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.4"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
